# VulkanEngine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
Editor/: CMakeLists.txt
Editor/Assets/Shaders/: Renderer2D_Triangle.glsl
Editor/Source/: EngineEditorApp.cpp  GUILayer.cpp  GUILayer.h
Engine/: CMakeLists.txt
Engine/Plugins/: CMakeLists.txt  imgui.cmake
Engine/Plugins/glm/: manual.md
Engine/Plugins/glm/doc/api/: a00243.html
Engine/Plugins/imgui/docs/: CHANGELOG.txt  FAQ.md  FONTS.md
Engine/Plugins/imgui/misc/debuggers/: imgui.natvis
Engine/Source/: Engine.h  EnginePCH.h
Engine/Source/Core/: Application.cpp  Application.h  Base.cpp  Base.h  Buffer.h  EntryPoint.h  Hash.cpp  Hash.h  Image.cpp  Image.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  MouseCodes.h  Random.cpp  Random.h  Ref.cpp  Ref.h  TimeStep.cpp  TimeStep.h  Timer.h  Window.cpp  Window.h
Engine/Source/Core/Events/: ApplicationEvent.h  EditorEvents.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/Source/ImGui/: Colours.cpp  Colours.h  ImGuiLayer.cpp  ImGuiLayer.h
Engine/Source/Platform/Vulkan/: Vulkan.cpp  Vulkan.h  VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanImGuiLayer.cpp  VulkanImGuiLayer.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h  VulkanShader.cpp  VulkanShader.h  VulkanSwapChain.cpp  VulkanSwapChain.h
Engine/Source/Platform/Vulkan/ShaderCompiler/: ShaderPreprocessor.cpp  ShaderPreprocessor.h
Engine/Source/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp  WindowsWindow.h
Engine/Source/Renderer/: Renderer.cpp  Renderer.h  RendererAPI.h  RendererContext.cpp  RendererContext.h  RendererTypes.h  Shader.cpp  Shader.h  ShaderPack.cpp  ShaderPack.h  ShaderUniform.h
Engine/Source/Serialization/: FileStream.cpp  FileStream.h  Serialization.h  ShaderPackFile.h  StreamReader.cpp  StreamReader.h  StreamWriter.cpp  StreamWriter.h
